[gd_scene load_steps=3 format=3 uid="uid://dcn2if5g8chpm"]

[ext_resource type="Script" path="res://Scenes/Interface/user_interface.gd" id="1_vjhkg"]
[ext_resource type="PackedScene" uid="uid://4ly04duxj5fu" path="res://Scenes/Interface/unit_portrait.tscn" id="2_mqlrt"]

[node name="UserInterface" type="CanvasLayer"]
script = ExtResource("1_vjhkg")

[node name="TempBugfix" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = " "

[node name="CoreHealthLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = " Core Health: 0"

[node name="ReloadState" type="VBoxContainer" parent="."]
offset_left = 70.0
offset_top = 99.0
offset_right = 726.0
offset_bottom = 531.0
alignment = 1

[node name="ReloadLabel" type="Label" parent="ReloadState"]
layout_mode = 2
text = "asdf"

[node name="ReloadLabel2" type="Label" parent="ReloadState"]
layout_mode = 2
text = "asdf"

[node name="ReloadLabel3" type="Label" parent="ReloadState"]
layout_mode = 2
text = "asdf"

[node name="ReloadLabel4" type="Label" parent="ReloadState"]
layout_mode = 2
text = "asdf"

[node name="GameOver" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -29.0
offset_right = 46.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="GameOver"]
self_modulate = Color(1, 0, 0, 1)
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOver"]
layout_mode = 2
text = "RESTART"

[node name="UnitPortraits" type="VBoxContainer" parent="."]
offset_left = 6.0
offset_right = 180.0
offset_bottom = 646.0
theme_override_constants/separation = 20
alignment = 1

[node name="UnitPortrait" parent="UnitPortraits" instance=ExtResource("2_mqlrt")]
layout_mode = 2

[node name="UnitPortrait2" parent="UnitPortraits" instance=ExtResource("2_mqlrt")]
layout_mode = 2

[node name="UnitPortrait3" parent="UnitPortraits" instance=ExtResource("2_mqlrt")]
layout_mode = 2

[node name="UnitPortrait4" parent="UnitPortraits" instance=ExtResource("2_mqlrt")]
layout_mode = 2

[node name="UnitShortcutLabels" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ShortcutLabel" type="Label" parent="UnitShortcutLabels"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "1"

[node name="ShortcutLabel2" type="Label" parent="UnitShortcutLabels"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "2"

[node name="ShortcutLabel3" type="Label" parent="UnitShortcutLabels"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "3"

[node name="ShortcutLabel4" type="Label" parent="UnitShortcutLabels"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "4"

[node name="GameState" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -79.5
offset_right = 79.5
offset_bottom = 50.0
grow_horizontal = 2

[node name="GameTimeLabel" type="Label" parent="GameState"]
layout_mode = 2
text = "00:00"
horizontal_alignment = 1

[node name="KillsLabel" type="Label" parent="GameState"]
layout_mode = 2
text = "0 Kills"
horizontal_alignment = 1
